--- a/puper/frontend/src/styles/variables.css
+++ b/puper/frontend/src/styles/variables.css
@@ -9,6 +9,9 @@
   --marble-gray: #E5E5E5;
   --marble-vein: #D0D0D0;
   --puple: #6f02d6;
+  --beige: #e3d494;
+  --red: #fa6060;
+  --gray: #808080;
   --dark-puple: #37026f;
   --wood-grain: linear-gradient(135deg, var(--primary-brown), var(--dark-brown));
   --marble-background:
