--- a/puper/frontend/src/styles/variables.css
+++ b/puper/frontend/src/styles/variables.css
@@ -8,9 +8,10 @@
   --marble-white: #F8F8F8;
   --marble-gray: #E5E5E5;
   --marble-vein: #D0D0D0;
+  --bright-yellow: #00ffbb;
   --puple: #6f02d6;
   --beige: #e3d494;
-  --red: #fa6060;
+  --red: #fa6c6c;
   --gray: #808080;
   --dark-puple: #37026f;
   --wood-grain: linear-gradient(135deg, var(--primary-brown), var(--dark-brown));
