--- a/puper/frontend/src/styles/globals.css
+++ b/puper/frontend/src/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Creepster&family=Nosifer&family=Butcherman&family=Eater&family=Metal+Mania&family=Griffy&family=Rye&family=Pirata+One&display=swap');
 
 * {
   margin: 0;
