--- a/puper/frontend/src/pages/HomePage.css
+++ b/puper/frontend/src/pages/HomePage.css
@@ -10,14 +10,13 @@
   z-index: 1;
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
   min-height: 100vh;
   display: flex;
   align-items: center;
 }
 
 .video-hero {
+  background: url(/123.mp4);
   padding: 0;
   min-height: 100vh;
   overflow: hidden;
